// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`External Link matches snapshot (disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c2 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c1 {
  color: #84C6EA;
  font-size: 0.875rem;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  target="_blank"
  type="external"
>
  External Link
  <svg
    aria-label="open in new window"
    class="c2"
    color="currentColor"
    focusable="false"
    height="16"
    role="img"
    width="16"
  />
</a>
`;

exports[`External Link matches snapshot (label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c2 {
  margin-right: var(--spacing-1x);
}

.c3 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="#"
  target="_blank"
  type="external"
>
  <svg
    aria-hidden="true"
    class="c2"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  External Link
  <svg
    aria-label="open in new window"
    class="c3"
    color="currentColor"
    focusable="false"
    height="16"
    role="img"
    width="16"
  />
</a>
`;

exports[`External Link matches snapshot (only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c2 {
  margin-right: var(--spacing-1x);
}

.c3 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="#"
  target="_blank"
  type="external"
>
  <svg
    aria-hidden="true"
    class="c2"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  <svg
    aria-label="open in new window"
    class="c3"
    color="currentColor"
    focusable="false"
    height="16"
    role="img"
    width="16"
  />
</a>
`;

exports[`External Link matches snapshot (without href) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c2 {
  margin-right: var(--spacing-1x);
}

.c3 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href=""
  target="_blank"
  type="external"
>
  <svg
    aria-hidden="true"
    class="c2"
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  External Link
  <svg
    aria-label="open in new window"
    class="c3"
    color="currentColor"
    focusable="false"
    height="16"
    role="img"
    width="16"
  />
</a>
`;

exports[`External Link matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #00629666;
  box-shadow: 0 0 0 3px #00629666,0 0 0 1px #006296;
}

.c2 {
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c1 {
  color: #006296;
  font-size: 0.875rem;
}

.c1:hover {
  color: #003A5A;
}

.c1:visited {
  color: #62a;
}

.c1:visited svg {
  color: #62a;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="https://www.google.ca/"
  target="_blank"
  type="external"
>
  External Link
  <svg
    aria-label="open in new window"
    class="c2"
    color="currentColor"
    focusable="false"
    height="16"
    role="img"
    width="16"
  />
</a>
`;
